# jinja-loader-bug

./: noxfile.py  pyproject.toml
.github/workflows/: tests.yml
src/jinja_loader_bug/: __main__.py
src/jinja_loader_bug/templates/: test_template.jinja
tests/: test_main.py
