[tool.poetry]
name = "jinja_loader_bug"
version = "0.1.0"
description = ""
authors = ["Paulo S. Costa <pauloscosta5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
